# Senjata-Execute-Assembly

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  maliable.profile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bofs/senjata-execute-assembly/: Cargo.toml
bofs/senjata-execute-assembly/aggressor/: senjata-execute-assembly.cna
bofs/senjata-execute-assembly/assets/: flush.dll.xor  nlog.dll.xor  stub.dll.xor
bofs/senjata-execute-assembly/src/: args.rs  clr.rs  clr_core.rs  clr_netfx.rs  debug_log.rs  error.rs  io.rs  lib.rs  pe_parser.rs
bofs/senjata-runner/: Cargo.toml  beacon.def  build.rs
bofs/senjata-runner/src/: args.rs  beacon_api.rs  cleanup.rs  debug_log.rs  lib.rs  pipes.rs  postex.rs  streamer.rs
bofs/senjata-runner/test/: test-runner.cna
crates/clr-orchestrator/: Cargo.toml
crates/clr-orchestrator/src/: bypasses.rs  cleanup.rs  clr_netfx_stomp.rs  core.rs  dispatch.rs  error.rs  flush.rs  io.rs  lib.rs  netfx.rs  nlog.rs
crates/opsec-bootstrap/: Cargo.toml
crates/opsec-bootstrap/src/: gadget.rs  lib.rs  syscall.rs
crates/opsec-bootstrap/tests/: gadget.rs
crates/opsec-com/: Cargo.toml
crates/opsec-com/src/: appdomain.rs  bstr.rs  clr.rs  comptr.rs  guids.rs  host_control.rs  host_memory_manager.rs  lib.rs  loader.rs  safearray.rs  variant.rs
crates/opsec-com/tests/: comptr.rs
crates/opsec-coreclr/: Cargo.toml
crates/opsec-coreclr/src/: discovery.rs  fs.rs  host.rs  lib.rs  registry.rs  semver.rs  stub_artifact.rs
crates/opsec-hwbp/: Cargo.toml
crates/opsec-hwbp/src/: descriptor.rs  engine.rs  lib.rs  spin.rs  veh.rs
crates/opsec-hwbp/tests/: descriptor.rs  spin.rs
crates/opsec-peb/: Cargo.toml
crates/opsec-peb/src/: hash.rs  lib.rs  ntdef.rs  pe.rs  peb_walk.rs
crates/opsec-peb/tests/: gen_fixture.py  hash.rs  pe_export.rs
crates/opsec-strcrypt/: Cargo.toml
crates/opsec-strcrypt-rt/: Cargo.toml
crates/opsec-strcrypt-rt/src/: lib.rs
crates/opsec-strcrypt/src/: lib.rs
crates/opsec-strcrypt/tests/: expand.rs
docs/: test-checklist.md
docs/profiles/: senjata-auto-ppid.cna  senjata-recommended.profile
docs/testing/: 2026-05-21-phase-7-matrix.md  coffloader-test-procedure.md
legacy/: README.md
scripts/: smoke.sh
stub/: build-flush-helper.sh  build-stub.sh  xor.py
stub/senjata-flush-helper/: FlushHelper.cs  FlushHelper.il
stub/senjata-loader/: Loader.cs  README.md  SenjataLoader.csproj
stub/senjata-nlog-helper/: .gitignore  NLogConfigHelper.cs  SenjataNLogHelper.csproj  build-nlog-helper.sh  compute-nlog-hashes.py
