[workspace]
resolver = "2"
members = [
    "crates/rustbof",
    "crates/rustbof-derive",
    "crates/opsec-strcrypt",
    "crates/opsec-strcrypt-rt",
    "crates/opsec-peb",
    "crates/opsec-bootstrap",
    "crates/opsec-hwbp",
    "crates/opsec-com",
    "crates/opsec-coreclr",
    "crates/clr-orchestrator",
    "bofs/senjata-execute-assembly",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["xsnizer"]
license = "MIT"
repository = "https://github.com/xsnizer/Senjata-Assembly"

[workspace.dependencies]
windows-sys = "0.59"

[workspace.lints.clippy]
# All public unsafe fns in this crate are unsafe FFI shims into Windows APIs;
# their safety contract is "the underlying Windows API contract holds". We
# don't repeat that boilerplate as a `# Safety` block on every shim.
missing_safety_doc = "allow"
# Naming follows Win32 SDK conventions where it matters for FFI layout
# clarity. snake_case-ifying field names would lose that.
upper_case_acronyms = "allow"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
lto = true
overflow-checks = false
debug-assertions = false
