[package]
name = "senjata-execute-assembly"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
rustbof = { path = "../../crates/rustbof" }
clr-orchestrator = { path = "../../crates/clr-orchestrator" }
opsec-hwbp = { path = "../../crates/opsec-hwbp" }

[lints]
workspace = true
