[package]
name = "opsec-com"
version.workspace = true
edition.workspace = true

[dependencies]
opsec-peb = { path = "../opsec-peb" }
opsec-strcrypt = { path = "../opsec-strcrypt" }

[dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
]
