[package]
name = "opsec-hwbp"
version.workspace = true
edition.workspace = true

[dependencies]
opsec-peb = { path = "../opsec-peb" }
opsec-bootstrap = { path = "../opsec-bootstrap" }
opsec-strcrypt = { path = "../opsec-strcrypt" }

[dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]

[lints]
workspace = true
